--- a/nx.json
+++ b/nx.json
@@ -1,14 +1,9 @@
 {
   "npmScope": "bg-hoard",
-  "affected": {
-    "defaultBase": "master"
-  },
+  "affected": { "defaultBase": "master" },
   "implicitDependencies": {
     "workspace.json": "*",
-    "package.json": {
-      "dependencies": "*",
-      "devDependencies": "*"
-    },
+    "package.json": { "dependencies": "*", "devDependencies": "*" },
     "tsconfig.base.json": "*",
     "tslint.json": "*",
     ".eslintrc.json": "*",
@@ -26,27 +21,16 @@
     }
   },
   "projects": {
-    "store": {
-      "tags": []
-    },
-    "store-e2e": {
+    "store": { "tags": [] },
+    "store-e2e": { "tags": [], "implicitDependencies": ["store"] },
+    "store-ui-shared": { "tags": [] },
+    "store-util-formatters": { "tags": [] },
+    "store-feature-game-detail": { "tags": [] },
+    "api": { "tags": [] },
+    "util-interface": { "tags": [] },
+    "store-ui-shared-e2e": {
       "tags": [],
-      "implicitDependencies": ["store"]
-    },
-    "store-ui-shared": {
-      "tags": []
-    },
-    "store-util-formatters": {
-      "tags": []
-    },
-    "store-feature-game-detail": {
-      "tags": []
-    },
-    "api": {
-      "tags": []
-    },
-    "util-interface": {
-      "tags": []
+      "implicitDependencies": ["store-ui-shared"]
     }
   }
 }
