--- a/nx.json
+++ b/nx.json
@@ -1,9 +1,14 @@
 {
   "npmScope": "bg-hoard",
-  "affected": { "defaultBase": "master" },
+  "affected": {
+    "defaultBase": "master"
+  },
   "implicitDependencies": {
     "workspace.json": "*",
-    "package.json": { "dependencies": "*", "devDependencies": "*" },
+    "package.json": {
+      "dependencies": "*",
+      "devDependencies": "*"
+    },
     "tsconfig.base.json": "*",
     "tslint.json": "*",
     ".eslintrc.json": "*",
@@ -24,20 +29,65 @@
     }
   },
   "projects": {
-    "store": { "tags": ["scope:store", "type:app"] },
+    "api": {
+      "tags": [
+        "scope:api",
+        "type:app"
+      ]
+    },
+    "api-util-notifications": {
+      "tags": [
+        "type:util'",
+        "scope:api"
+      ]
+    },
+    "store": {
+      "tags": [
+        "scope:store",
+        "type:app"
+      ]
+    },
     "store-e2e": {
-      "tags": ["scope:store", "type:e2e"],
-      "implicitDependencies": ["store"]
+      "tags": [
+        "scope:store",
+        "type:e2e"
+      ],
+      "implicitDependencies": [
+        "store"
+      ]
     },
-    "store-ui-shared": { "tags": ["scope:store", "type:ui"] },
-    "store-util-formatters": { "tags": ["scope:store", "type:util"] },
-    "store-feature-game-detail": { "tags": ["scope:store", "type:feature"] },
-    "api": { "tags": ["scope:api", "type:app"] },
-    "util-interface": { "tags": ["scope:shared", "type:util"] },
+    "store-feature-game-detail": {
+      "tags": [
+        "scope:store",
+        "type:feature"
+      ]
+    },
+    "store-ui-shared": {
+      "tags": [
+        "scope:store",
+        "type:ui"
+      ]
+    },
     "store-ui-shared-e2e": {
-      "tags": ["scope:store", "type:e2e"],
-      "implicitDependencies": ["store-ui-shared"]
+      "tags": [
+        "scope:store",
+        "type:e2e"
+      ],
+      "implicitDependencies": [
+        "store-ui-shared"
+      ]
     },
-    "api-util-notifications": { "tags": ["type:util'", "scope:api"] }
+    "store-util-formatters": {
+      "tags": [
+        "scope:store",
+        "type:util"
+      ]
+    },
+    "util-interface": {
+      "tags": [
+        "scope:shared",
+        "type:util"
+      ]
+    }
   }
 }
