--- a/nx.json
+++ b/nx.json
@@ -1,14 +1,9 @@
 {
   "npmScope": "bg-hoard",
-  "affected": {
-    "defaultBase": "master"
-  },
+  "affected": { "defaultBase": "master" },
   "implicitDependencies": {
     "workspace.json": "*",
-    "package.json": {
-      "dependencies": "*",
-      "devDependencies": "*"
-    },
+    "package.json": { "dependencies": "*", "devDependencies": "*" },
     "tsconfig.base.json": "*",
     "tslint.json": "*",
     ".eslintrc.json": "*",
@@ -32,65 +27,20 @@
     }
   },
   "projects": {
-    "api": {
-      "tags": [
-        "scope:api",
-        "type:app"
-      ]
-    },
-    "api-util-notifications": {
-      "tags": [
-        "type:util'",
-        "scope:api"
-      ]
-    },
-    "store": {
-      "tags": [
-        "scope:store",
-        "type:app"
-      ]
-    },
+    "api": { "tags": ["scope:api", "type:app"] },
+    "api-util-notifications": { "tags": ["type:util'", "scope:api"] },
+    "store": { "tags": ["scope:store", "type:app"] },
     "store-e2e": {
-      "tags": [
-        "scope:store",
-        "type:e2e"
-      ],
-      "implicitDependencies": [
-        "store"
-      ]
+      "tags": ["scope:store", "type:e2e"],
+      "implicitDependencies": ["store"]
     },
-    "store-feature-game-detail": {
-      "tags": [
-        "scope:store",
-        "type:feature"
-      ]
-    },
-    "store-ui-shared": {
-      "tags": [
-        "scope:store",
-        "type:ui"
-      ]
-    },
+    "store-feature-game-detail": { "tags": ["scope:store", "type:feature"] },
+    "store-ui-shared": { "tags": ["scope:store", "type:ui"] },
     "store-ui-shared-e2e": {
-      "tags": [
-        "scope:store",
-        "type:e2e"
-      ],
-      "implicitDependencies": [
-        "store-ui-shared"
-      ]
+      "tags": ["scope:store", "type:e2e"],
+      "implicitDependencies": ["store-ui-shared"]
     },
-    "store-util-formatters": {
-      "tags": [
-        "scope:store",
-        "type:util"
-      ]
-    },
-    "util-interface": {
-      "tags": [
-        "scope:shared",
-        "type:util"
-      ]
-    }
+    "store-util-formatters": { "tags": ["scope:store", "type:util"] },
+    "util-interface": { "tags": ["scope:shared", "type:util"] }
   }
 }
