--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nrwl/angular": "^11.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
+    "surge": "^0.22.1",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.2"
   },
